--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "popper.js": "^1.16.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.8.0",
     "react-moment": "^0.9.7",
     "react-scripts": "3.3.0"
   },
